Use MezzConfig sorting configs
(cherry picked from commit 0f4db962d4f7990a8f6a5de7fe54e0ea1dd9d401)